@@ -28,3 +28,9 @@ graalvmNative {
         }
     }
 }
+
+tasks.named("test") {
+    if ((JavaVersion.current().majorVersion as int) < 24) {
+        jvmArgs += ["-Djava.security.manager=allow"]
+    }
+}
